--- a/examples/general-example/one.tex
+++ b/examples/general-example/one.tex
@@ -3,40 +3,39 @@
     \node[rectangle,
           draw,
           fill = green!30,
-          minimum width = 1.5cm, 
+          minimum width = 1.6cm, 
           minimum height = 0.5cm
           ] (ms4) at (0,0) {};
     \node[] at (ms4.center) {\texttt{ms2}};
 
     \node[rectangle,
         draw,
-        fill = green!30,
-        minimum width = 1.5cm, 
+        minimum width = 1cm, 
         minimum height = 0.5cm
-        ] (ms2) at (1,1) {};
+        ] (ms2) at (.6,.8) {};
     \node[] at (ms2.center) {\texttt{ms1}};
 
 
     \node[rectangle,
         draw,
         fill = yellow!30,
-        minimum width = 1.5cm, 
+        minimum width = 1cm, 
         minimum height = 0.5cm
-        ] (sys) at (-1,1) {};
+        ] (sys) at (-.6,.8) {};
     \node[] at (sys.center) {\texttt{c\_c1}};
 
     \node[rectangle,
         draw,
         fill = yellow!30,
-        minimum width = 1.5cm, 
+        minimum width = 1cm, 
         minimum height = 0.5cm
-        ] (vc) at (1,2) {};
+        ] (vc) at (.6,1.6) {};
     \node[] at (vc.center) {\texttt{c\_c2}};
 
     \node[rectangle,
         minimum width = 1cm, 
         minimum height = 0.5cm
-        ] (label) at (0,-1) {};
+        ] (label) at (0,-.5) {};
     \node[] at (label.center) {$a$};
 
 
