representative examples and todo notes

--- a/examples/general-example/two.tex
+++ b/examples/general-example/two.tex
@@ -38,6 +38,11 @@
         ] (label) at (0,-.5) {};
     \node[] at (label.center) {$b$};
 
+    \node[rectangle,
+    minimum width = 1cm, 
+    minimum height = 0.5cm
+    ] (space) at (0,2.4) {};
+\node[] at (space.center) {};
 
     \path[every node/.style={font=\sffamily\small}]
     %host1 path
