--- a/examples/general-example/one.tex
+++ b/examples/general-example/one.tex
@@ -39,6 +39,12 @@
     \node[] at (label.center) {$a$};
 
 
+    \node[rectangle,
+    minimum width = 1cm, 
+    minimum height = 0.5cm
+    ] (space) at (0,2.4) {};
+\node[] at (space.center) {};
+
     \path[every node/.style={font=\sffamily\small}]
     %host1 path
     (vc) edge [] node [right] {} (ms2.north) 
