--- a/fm24.tex
+++ b/fm24.tex
@@ -88,7 +88,7 @@ A key facet of the negotiation routine is attestation protocol selection where s
 
 This emerging adversary-constrained protocol ordering requires a few key assumptions and definitions. First, we consider an active adversary that is capable of corrupting any component of the target system causing it to deviate from its regular behavior and is also capable of repairing any component of the target system returning it to its regular state. We assume that the target system has a special component, namely a root of trust for measurement (RTM), that cannot be attacked by the adversary. Furthermore, we assume an adversary will always choose the easiest attack to thwart an appraiser. Therefore, a better protocol increases the demands of an active adversary by making the easiest attack more difficult. For an adversary to attack an attestation protocol means to corrupt and repair a target system's components in a way that passes appraisal and therefore evades detection at the final measurement event. A corrupt measurer---either a measurer that itself is in a corrupt state or a measurer that relies on some other component that is in a corrupt state---will always generate evidence that indicates its target is in its regular state. While a regular measurer will generate evidence that accurately reflects the corruption state of its target. Our analysis relies solely on the structure of possible attacks and is agnostic to the specific details of how an adversary can corrupt or repair system components as required by an attack.
 
-Considering these assumptions, the formalized model and subsequent analysis reveal the following two principles.
+Considering these assumptions, the formalized model and subsequent analysis support the following two principles.
 
 \begin{enumerate}
     \item Measurements that mimic the system's dependency chain better confine the adversary
@@ -156,17 +156,17 @@ Consider an example protocol where two measurements are performed in sequence as
 
 
 \section{Overview}
-We introduce a Coq-based, formally-verified mathematical model to order attestation protocols by the difficulty required by an active adversary to attack the protocol. This ordering methodology compares two distinct Copland protocols by comparing their sets of Chase-generated attack trees. Sets of attack trees are compared using our proposed novel ordering scheme which is reliant upon an ordering scheme over individual attack trees. We propose an ordering over individual attack trees that considers two facets regarding the difficulty required by an adversary. This ordering scheme is designed such that one can easily plug in additional considerations and constraints to enhance the ordering.
+We introduce a Coq-based, formally-verified mathematical model to order attestation protocols by the difficulty required of an active adversary to attack the protocol. This ordering methodology compares two distinct Copland protocols by comparing their sets of Chase-generated attack trees. Sets of attack trees are compared using our proposed novel ordering scheme which is reliant upon an ordering scheme over individual attack trees. We propose an ordering over individual attack trees that considers two facets regarding the difficulty required by an adversary. This ordering scheme is designed such that one can easily plug in additional considerations and constraints to enhance the ordering.
 
 \begin{figure}[hbtp]
     \centering
     \captionsetup{justification=centering,margin=1cm}
     \input{commuting_fig.tex}
-    \caption[Protocol ordering abstraction]{Diagram representing protocol ordering methodology. \\ Dashed lines represent ordering relation for individual trees holds. }
+    \caption[Protocol ordering abstraction]{Diagram representing protocol ordering methodology. }
     \label{fig:protocol-org-fig}
 \end{figure}
 
-Abstractly this analysis can be visualized in Figure \ref{fig:protocol-org-fig} where solid lines represent tangible actions and dashed lines represent reasoning. Say we aim to compare two protocols $P1$ and $P2$ where we wish to determine if the change from $P1$ to $P2$ makes the protocol more difficult to attack. Recall that more difficult to attack means more difficult for an active adversary to corrupt a system while evading detection at the final measurement event of the attestation. To ascertain the relationship between the two protocols, we first run Chase to generate the set of attack trees $\{ a_1, a_2, a_3\}$ for $P1$ and the set of attack trees for $\{b_1, b_2, b_3\}$ for $P2$. We then compare the Chase-generated attack trees individually, discovering ordering relations between $a_1 \preceq b_1$, $a_2 \preceq b_2$, and $a_1 \preceq b_3$ as represented by the dotted lines with arrows pointing from an attack to one that is at least as difficult to perform. Next, looking at the sets of attack trees, we can see that every attack tree in $P2$ has a tree in $P1$ that is at most as difficult to perform. Assuming an adversary would always perform the easiest attack to thwart an appraiser, we conclude that $P2$ is at least as difficult to attack as $P1$ and thus involves at least as much adversary effort as $P1$. This logic is linked to the protocols to define $ P1 \leq P2$.  
+Abstractly this analysis can be visualized in Figure \ref{fig:protocol-org-fig} where solid lines represent tangible actions and dashed lines represent reasoning. Say we aim to compare two protocols $P1$ and $P2$ where we wish to determine if the change from $P1$ to $P2$ makes the protocol more difficult to attack. Recall that more difficult to attack means more difficult for an active adversary to corrupt a system while evading detection at the final measurement event of the attestation. To ascertain the relationship between the two protocols, we first run Chase to generate the set of attack trees $\{ a_1, a_2, a_3\}$ for $P1$ and the set of attack trees $\{b_1, b_2, b_3\}$ for $P2$. We then compare the Chase-generated attack trees individually, discovering ordering relationships $a_1 \preceq b_1$, $a_2 \preceq b_2$, and $a_1 \preceq b_3$ as represented by the dotted lines with arrows pointing from an attack to one that is at least as difficult to perform. Next, looking at the sets of attack trees, we can see that every attack tree in $P2$ has an attack in $P1$ that is at most as difficult to perform. Assuming an adversary would always perform the easiest attack to thwart an appraiser, we conclude that $P2$ is at least as difficult to attack as $P1$ and thus involves at least as much adversary effort as $P1$. This logic is linked to the protocols to conclude $P1 \leq P2$.  
 
 We introduce four ordering relations for adversary-constrained protocol ordering where $=$ is an equivalence relation and $\le$ and $\ge$ are partial orders. The relations are enumerated below.
 
@@ -194,14 +194,14 @@ Under our methodology, an ordering relation between two Copland protocol can be 
     \item Link the set ordering relationship to determine protocol ordering relationship
 \end{enumerate}
 
-The following sections describe the process of introducing and verifying an adversary-constrained ordering between two Copland protocols. In this paper, mathematical proofs are presented manually, but mechanized versions are completed in Coq and can be found at \url{git@github.com:ku-sldg/protocol_ordering.git}.
+The following sections describe the process of introducing and verifying an adversary-constrained ordering for Copland protocols. In this paper, mathematical definitions and proofs are presented manually, but mechanized versions are completed in Coq and can be found at \url{git@github.com:ku-sldg/protocol_ordering.git}.
 
 
 \section{Ordering Individual Attack Trees}
 
 Our main contribution lies in introducing an adversary-constrained protocol ordering through analysis of Chase-generated attack trees. In this section, we establish definitions to compare adversary events and utilize these definitions to present orderings over attack trees. Specifically, we introduce equivalence ($\simeq$), strict partial order ($\prec$), and partial order ($\preceq$) relations over individual attack trees. In future sections, these relations will be leveraged to introduce equivalence and partial order relations over sets of attack trees.
 
-The Chase generated attack trees presented in Figure \ref{fig:chase-ex} can be used to describe the essential insights applied in developing our adversary-constrained protocol ordering. In attack tree $a$, corruption events \texttt{c\_c1} and \texttt{c\_c2} occur before any measurement events, giving the adversary a minimally-restricted amount of time to perform these actions. In attack tree $b$, corruption event \texttt{c\_c2} occurs between measurement events, confining the adversary to a small-time window to perform this action. We assert that performing the same action in a more limited time window (e.g., adversary event \texttt{c\_c2} in $b$ versus in $a$) is more challenging. Since \texttt{c\_c1} is a minimally-restricted adversary event in both $a$ and $b$, we wish to conclude that $a$ is strictly less work to perform by an adversary than $b$. Now in attack tree $c$, an adversary must perform three corruption events and one time-constrained repair event. This attack requires an adversary to perform more work than $a$ as adversary events have increased. Upon analyzing all three trees, it becomes apparent that attack $a$ presents the easiest attack given the absence of time-constrained events and the lowest number of actions required by the adversary. Because of this, we assume an adversary would perform the attack represented by tree $a$ to deceive a relying party. 
+The Chase generated attack trees presented in Figure \ref{fig:chase-ex} can be used to describe the essential insights applied in developing our adversary-constrained protocol ordering. In attack tree $a$, corruption events \texttt{c\_c1} and \texttt{c\_c2} occur before any measurement events, giving the adversary a minimally-restricted amount of time to perform these actions. In attack tree $b$, corruption event \texttt{c\_c2} occurs between measurement events, confining the adversary to a small-time window to perform this action. We assert that performing the same action in a more limited time window (e.g., adversary event \texttt{c\_c2} in $b$ versus in $a$) is more challenging. Since \texttt{c\_c1} is a minimally-restricted adversary event in both $a$ and $b$, we wish to conclude that $a$ is strictly less work to perform by an adversary than $b$. Now in attack tree $c$, an adversary must perform three corruption events and one time-constrained repair event. This attack requires an adversary to perform more work than $a$ as adversary events have increased. Upon analyzing all three trees, it becomes apparent that attack $a$ presents the easiest attack given the absence of time-constrained events and the lowest number of actions required by the adversary. 
 
 
 
@@ -235,9 +235,7 @@ When comparing two individual attack trees, we need only consider events that co
 \end{figure}
 
 
-\noindent To demonstrate attack tree normalization, consider the example presented in Figure \ref{fig:reduce-ex} where tree $a$ is normalized to $a'$. When applying attack tree normalization, the consecutive measurement events \texttt{ms2} and \texttt{ms3} are reduced to only the latter measurement event \texttt{ms3}, and the remaining non-final measurement event \texttt{ms1} is renamed to \texttt{ms}.
-
-For the remainder of this paper, unless otherwise noted, we assume all Chase-generated attack trees are in their normal form.
+\noindent To demonstrate attack tree normalization, consider the example presented in Figure \ref{fig:reduce-ex} where tree $a$ is normalized to $a'$. When applying attack tree normalization, the consecutive measurement events \texttt{ms2} and \texttt{ms3} are reduced to only the latter measurement event \texttt{ms3}, and the remaining non-final measurement event \texttt{ms1} is renamed to \texttt{ms}. For the remainder of this paper, unless otherwise noted, we assume all Chase-generated attack trees are in their normal form.
 
 To compare individual Chase-generated attack trees, we introduce additional definitions to aid in determining when one attack tree requires strictly less or equivalent work to perform by an adversary. Central to this comparison is the different classification of adversary actions that may be present within an attack tree. That is, Chase generated attack trees contain measurement and adversary events, and it is the variety of consecutive occurences that may occur that influences our ordering definitions.  
 
@@ -273,8 +271,6 @@ With these preliminary definitions in place, we can now describe our proposed or
 
 Next, we must define a strict partial order relation over individual attack trees. It should be the case that under this relation one attack tree is strictly better than another if it increases the burden of an attacker. To formally define the concept of increasing adversary constraint, we analyzed many Chase-generated attack trees to ground our logic in concrete examples. By studying patterns in the trees, we select two distinct conditions that confine an adversary to consider in our ordering scheme. That is, an attack has increased difficulty if it requires more adversary events or more time-constrained adversary events. We formally define this relation below as "strictly less work".
 
-%% TODO: Talk about parameterization of adversary events
-
 \begin{definition}[Strictly Less Work]
   An attack tree $a$ requires strictly less work to perform by an adversary than attack tree $b$ if and only if at least one of the following hold: 
 \begin{enumerate}
@@ -286,13 +282,16 @@ Next, we must define a strict partial order relation over individual attack tree
 \end{enumerate}
 \end{definition}
 
-\noindent By design, this definition only allows the comparison of attack trees $a$ and $b$ where both $\pi(a) \subseteq \pi(b)$ and $\tau(a) \subseteq \tau(b)$. In other words, we only compare attack trees that share common sets of both adversary events and time-constrained adversary events. Looking back at Figure \ref{fig:chase-ex}, we can compute the sets of adversary events and sets of time-constrained adversary events for attacks $a$, $b$, and $c$ and then determine what ordering relationships hold between them. For attack $a$ we get that $\pi(a) = \{ \texttt{c\_c1}, \texttt{c\_c2} \}$ and $\tau(a) = \emptyset$. For attack $b$, $\pi(b) = \{ \texttt{c\_c1}, \texttt{c\_c2} \}$ and $\tau(b) = \{ \texttt{c\_c2} \}$. And lastly for attack $c$, $\pi(c) = \{ \texttt{c\_c1}, \texttt{c\_c2}, \texttt{c\_c3}, \texttt{r\_c2} \}$ and $\tau(c) = \{ \texttt{r\_c2} \}$. Using the definition of strict partial order below, we can conclude that $a \prec b$, $a \prec c$, and $b$ and $c$ are incomparable.
-
 \begin{definition}[Strict Partial Order $\prec$]
-    An attack tree $a$ is strictly less than attack tree $b$ (i.e., $a \prec b$) if and only if $a$ requires strictly less work than $b$.
+  An attack tree $a$ is strictly less than attack tree $b$ (i.e., $a \prec b$) if and only if $a$ requires strictly less work than $b$.
 \end{definition}
 
-To formally verify this relation is indeed a strict partial order, we prove the relation is irreflexive, asymmetric, and transitive in Coq. Our proofs rely primarily on the fact that subset is a partial order and proper subset is a strict partial order. We do not present the proofs mathematically here since they are uninteresting.
+\noindent By design, this definition only allows the comparison of attack trees $a$ and $b$ where both $\pi(a) \subseteq \pi(b)$ and $\tau(a) \subseteq \tau(b)$. In other words, we only compare attack trees that share common sets of both adversary events and time-constrained adversary events. Looking back at Figure \ref{fig:chase-ex}, we can compute the sets of adversary events and sets of time-constrained adversary events for attacks $a$, $b$, and $c$ and then determine what ordering relationships hold between them. For attack $a$ we get that $\pi(a) = \{ \texttt{c\_c1}, \texttt{c\_c2} \}$ and $\tau(a) = \emptyset$. For attack $b$, $\pi(b) = \{ \texttt{c\_c1}, \texttt{c\_c2} \}$ and $\tau(b) = \{ \texttt{c\_c2} \}$. And lastly for attack $c$, $\pi(c) = \{ \texttt{c\_c1}, \texttt{c\_c2}, \texttt{c\_c3}, \texttt{r\_c2} \}$ and $\tau(c) = \{ \texttt{r\_c2} \}$. Using the definition of strict partial order below, we can conclude that $a \prec b$, $a \prec c$, and $b$ and $c$ are incomparable.
+
+Furthermore, our design of the strict partial order relation allows it to be enhanced with an ordering over adversarial events themselves. Given a strict partial order over adversarial events, it can be utilized in our definition of ``strictly less work'' in the Coq specification. This is because its definition is parameterized over an arbitrary adversary event ordering. Examples of such orderings are that corrupting a shallower component is less difficult than corrupting a deeper one and that repairing a component is less difficult than corrupting one. We do not assert that these orderings over adversarial events hold. Instead, we only provide them as examples for how our ordering scheme can be enhanced with potentially desirable considerations. For the rest of this paper, we are only reasoning under the empty relation over adversarial events, meaning we do not state that any event is more or less difficult than another.
+
+
+To formally verify our strict partial order over individual attack trees is indeed a strict partial order, we prove the relation is irreflexive, asymmetric, and transitive in Coq. Our proofs rely primarily on the fact that subset is a partial order and proper subset is a strict partial order.
 
 We additionally define a partial order relation over individual attack trees by the combination of the equivalence and strict partial order relations defined earlier in this section. This design is motivated by the reflexive closure principle. We verify in Coq that this definition is in fact a partial order by proving it is reflexive, antisymmetric, and transitive.
 
@@ -333,24 +332,45 @@ Supports states that, for every tree in $T$, there exists some related tree in $
 
 The definition of supports and covers is parameterized over a relation $R$. For an adversary-constrained protocol ordering, we choose $R$ to be the partial order over attack trees defined previously. Therefore, in Figure \ref{fig:sup-cov}, arrows between the individual attack trees represent partial order relationships.
 
-While Rowe defines both supports and covers, we only need to be concerned with supports for our adversary-constrained protocol ordering. The motivation for this two-fold. First, we assume that given a protocol and its associated attacks, an adversary will always perform the easiest one (i.e., some attack $a$ such that $\forall b \in S, b \npreceq a$ where $S$ is the associated set of attack trees). Second, we must consider our desired conclusion of protocol ordering: if a protocol $S$ is less than a protocol $T$, then $T$ is at least as good as $S$ and therefore \emph{should be selected over $S$}. Therefore, we must consider every attack in the better protocol so as not to overlook the easiest attack. Furthermore, we need not consider every tree in the weaker protocol. This is best understood by examining the two extreme cases for the skipped tree: it is the easiest attack, or it is the hardest attack. If it is the easiest attack, then clearly the protocol is still the weaker one. If it is the hardest attack, then it has no effect on the protocol since, by our assumption, an attacker would not choose this attack.
+While Rowe defines both supports and covers, we only need to be concerned with supports for our adversary-constrained protocol ordering. The motivation for this two-fold. First, we assume that given a protocol and its associated attacks, an adversary will always perform the easiest one (i.e., some attack $a$ such that $\forall b \in S, b \npreceq a$ where $S$ is the associated set of attack trees). Second, we must consider our desired conclusion of protocol ordering: if a protocol $S$ is less than a protocol $T$, then $T$ is at least as good as $S$ and therefore \emph{should be selected over $S$}. Therefore, we must consider every attack in the better protocol so as not to overlook the easiest attack. Furthermore, we need not consider every tree in the weaker protocol. This is best understood by examining the extreme cases for the unevaluated tree: (1) it is the easiest attack or (2) it is the hardest attack. If it is the easiest attack, then clearly the protocol is still the weaker one. If it is the hardest attack, then it has no effect on the protocol since, by our assumption, an attacker would not choose this attack.
 
 \begin{definition}[Partial Order $\leq$]
   A set of attack trees $S$ is less than a set of attack trees $T$ (i.e., $S \leq T$) if and only if S supports T with the partial order relation $\preceq$.
 \end{definition} 
 
-Recall that a partial order is reflexive, antisymmetric, and transitive. We easily verify in Coq that our proposed partial order relation is reflexive and transitive. Verifying that the relation is antisymmetric proved more difficult and, in fact, impossible. That is, it is impossible using the classic definition of antisymmetry (i.e., if $S \le T$ and $T \le S$ then $S = T$). A simple counter example can be constructed using the attack trees in Figure \ref{fig:chase-ex}. Let $S = \{a,b\}$ and $T = \{a\}$. Then $S \le T$ since $a \preceq a$, and $T \le S$ since $a \preceq a$ and $a \preceq b$. But clearly it is not the case that $S$ is the same set as $T$. Instead, we can see that set of weakest attacks in $S$ is the same set as the set of weakest attacks in $T$. In fact, this property holds not only for this example but for any two protocols. Therefore, we construct and prove a modified version of antisymmetry. Before we give its precise specification, we must provide a preliminary definition.
+Recall that a partial order is reflexive, antisymmetric, and transitive. We easily verify in Coq that our proposed partial order relation is reflexive and transitive. Verifying that the relation is antisymmetric proved more difficult and, in fact, impossible. That is, it is impossible using the classic definition of antisymmetry (i.e., if $S \le T$ and $T \le S$ then $S = T$). A simple counter example can be constructed using the attack trees in Figure \ref{fig:chase-ex}. Let $S = \{a,b\}$ and $T = \{a\}$. Then $S \le T$ since $a \preceq a$, and $T \le S$ since $a \preceq a$ and $a \preceq b$. But clearly it is not the case that $S$ is the same set as $T$. Instead, we can see that the set of weakest attacks in $S$ is the same as the set of weakest attacks in $T$. In fact, this property holds not only for this example but for any two protocols. Therefore, we construct and prove a modified version of antisymmetry. Before we give its precise specification, we must provide a preliminary definition.
 
 \begin{definition}[Minimal Attack Tree, \normalfont{min}]
-  An attack tree $a$ is minimal with respect to a set $S$ if and only $b \nprec a$ for every $b \in S$. Given a set of attack trees $S$, let $min(S) := \{a \in S \,|\, a \text{ is minimal with respect to } S \}$.
+  An attack tree $a$ is minimal with respect to a set $S$ if and only $b \nprec a$ for every $b \in S$. Given a set of attack trees $S$, let $\text{min}(S) := \{a \in S \,|\, a \text{ is minimal with respect to } S \}$.
 \end{definition}
 
-Our revised version of antisymmetry is stated as follows: if $S \le T$ and $T \le S$ then min($S$) = min($T$). Although this property is mathematically weaker than its standard version, it is, in practice, considering our goals, adequately and equally as strong.
+Our revised version of antisymmetry is stated as follows: if $S \le T$ and $T \le S$ then $\text{min}(S) = \text{min}(T)$. Although this property is mathematically weaker than its standard version, it is, in practice, considering our goals, adequately and equally as strong. To prove this antisymmetry property, we must apply several facts regarding minimal attack trees provided below. These lemmas are true by the definition of minimal.
 
-%% TODO: Talk about proof of antisymmetry
+\begin{lemma}[Minimal Set is Less than Full Set]
+  For every set of attack trees $S$, $\text{min}(S) \le S$ (i.e., $\forall a \in S, \exists a' \in \text{min}(S), a' \preceq a$).
+\end{lemma}
 
-With verified equivalence and partial order relations, we can link the ordering decision over sets of attack trees to their corresponding protocols allows us to provably state that one protocol is at least as difficult to attack as another protocol. If no ordering relation holds, the protocols are incomparable. Therefore, with the additional definitions for individual attack tree comparison and set comparison, we have formally verified the four previously defined mutually inclusive relationships hold for ordering Copland protocols. By leveraging existing tools, like the Chase model finder, we were able to successfully capture all possible attacks and adversary may launch yet go undetected. This ordering reasons over those attacks, successfully introducing a proven adversary-constrained protocol ordering. 
+\begin{lemma}[Minimal Attack is Not Strictly Less than Another]
+  For every set of attack trees $S$ and attack trees $a_1, a_2 \in \text{min}(S)$, $a_1 \nprec a_2$.
+\end{lemma}
 
+\begin{theorem}[Antisymmetry of Partial Order $\leq$]
+  For all sets of attack trees $S$ and $T$, if $S \le T$ and $T \le S$ then $\text{min}(S) = \text{min}(T)$. 
+\end{theorem}
+\begin{proof}
+  Let $S$ and $T$ be arbitrary sets of attack trees. Suppose that $S \le T$ and $T \le S$. 
+  
+  Let us begin by proving two intermediate statements regarding the ordering relationships between $\text{min}(S)$ and $\text{min}(T)$, namely that $\text{min}(S) \leq \text{min}(T)$ and $\text{min}(T) \leq \text{min}(S)$. Since $\text{min}(S) \leq S$ by Lemma 1 and $S \leq T$ by assumption, $\text{min}(S) \leq T$ by transitivity of $\leq$. Then since $\text{min}(T) \subseteq T$, $\text{min}(S) \leq \text{min}(T)$ trivially. We can apply a similar reasoning to get that $\text{min}(T) \leq \text{min}(S)$.
+
+  Now recall our definition of set equivalence: $\text{min}(S) = \text{min}(T)$ if and only if $\text{min}(S) \subseteq \text{min}(T)$ and $\text{min}(T) \subseteq \text{min}(S)$ up to isomorphism. Therefore, let us proceed by proving the first subgoal: $\text{min}(S) \subseteq \text{min}(T)$ up to isomorphism (i.e., $\forall s \in \text{min}(S), \exists t \in \text{min}(T), s \simeq t)$.  Let $s$ be an arbitrary attack tree in $\text{min}(S)$. 
+
+  Since $\text{min}(T) \leq \text{min}(S)$, there exists some attack tree $t \in \text{min}(T)$ such that $t \preceq s$. Therefore, either $t \simeq s$ or $t \prec s$. Suppose $t \simeq s$. Then we have proven our goal and are done. Now suppose $t \prec s$. Since $\text{min}(S) \leq \text{min}(T)$, there exists some attack $s' \in \text{min}(S)$ such that $s' \preceq t$. Then $s' \prec s$ by transitivity of $\preceq$ and $\prec$. A contradiction by Lemma 2.
+  
+  We can apply a similar reasoning prove the second subgoal: $\text{min}(T) \subseteq \text{min}(S)$ up to isomorphism. Thereby proving antisymmetry of $\leq$.
+\end{proof}
+
+
+With verified equivalence and partial order relations, we can link the ordering decision over sets of attack trees to their corresponding protocols allowing us to provably state that one protocol is at least as difficult to attack as another protocol. If no ordering relation holds, the protocols are incomparable. Therefore, with the additional definitions for individual attack tree comparison and set comparison, we have formally specified and verified the four previously defined mutually inclusive relations for ordering Copland protocols. 
 
 \section{Representative Examples}
 
@@ -416,12 +436,12 @@ The first protocol $ker\text{-}vc\text{-}sys$ is our baseline protocol consistin
     \label{fig:rtm-compare-reduced}
 \end{figure}
 
-%% TODO: Elaborate on why individual graph ordering relationships hold
-Now, let us first compare the first and second protocols. We begin by collecting the Chase output and reducing the attack trees to normal form as shown in Figure \ref{fig:rtm-compare-reduced}. Next, we can determine the ordering relationships between the individual attack graphs in the two sets: $a_1 \simeq b_1$, $a_2 \simeq b_2$, $a_3 \prec b_3$, $a_4 \prec b_4$, and $a_5 \simeq b_5$. Lastly we can determine the ordering relationships between the two protocols. It is clear to see that for every attack $b$ in $rtm\text{-}ker\text{-}vc\text{-}sys$ there exists an attack $a$ in $ker\text{-}vc\text{-}sys$ such that $a \preceq b$. Therefore, we can conclude that $ker\text{-}vc\text{-}sys \leq rtm\text{-}ker\text{-}vc\text{-}sys$. Furthermore, it is not the case that $rtm\text{-}ker\text{-}vc\text{-}sys \leq ker\text{-}vc\text{-}sys$ since there is no attack in $rtm\text{-}ker\text{-}vc\text{-}sys$ that is less than $a_3$ or $a_4$. Our ultimate conclusion supports hypothesis 1 that measurements that mimic the system's dependency chain better confine the adversary.
+%% TODO: Elaborate on why individual tree ordering relationships hold
+Now, let us first compare the first and second protocols. We begin by collecting the Chase output and reducing the attack trees to normal form as shown in Figure \ref{fig:rtm-compare-reduced}. Next, we can determine the ordering relationships between the individual attack trees in the two sets: $a_1 \simeq b_1$, $a_2 \simeq b_2$, $a_3 \prec b_3$, $a_4 \prec b_4$, and $a_5 \simeq b_5$. Lastly we can determine the ordering relationships between the two protocols. It is clear to see that for every attack $b$ in $rtm\text{-}ker\text{-}vc\text{-}sys$ there exists an attack $a$ in $ker\text{-}vc\text{-}sys$ such that $a \preceq b$. Therefore, we can conclude that $ker\text{-}vc\text{-}sys \leq rtm\text{-}ker\text{-}vc\text{-}sys$. Furthermore, it is not the case that $rtm\text{-}ker\text{-}vc\text{-}sys \leq ker\text{-}vc\text{-}sys$ since there is no attack in $rtm\text{-}ker\text{-}vc\text{-}sys$ that is less than $a_3$ or $a_4$. Our ultimate conclusion supports hypothesis 1 that measurements that mimic the system's dependency chain better confine the adversary.
 
-%% TODO: Elaborate on why individual graph ordering relationships hold
-%% TODO: Elaborate on antisymmetry conclusion
-Next, let us compare the first and third protocols. The set of reduced attack trees for the third protocol is shown in Figure \ref{fig:hv-reduced}. Now we can determine the ordering relationships between the individual attack graphs in the two sets: $a_1 \simeq c_1$, $a_2 \simeq c_2$, $a_3 \simeq c_3$, $a_4 \simeq c_4$, $a_5 \simeq c_5$, $a_2 \simeq c_6$, $a_1 \prec c_7$, $a_2 \prec c_8$, $a_4 \prec c_9$, and $a_5 \prec c_{10}$. And again lastly we can determine the ordering relationships between the two protocols: $ker\text{-}vc\text{-}sys \leq ker\text{-}hv\text{-}vc\text{-}sys$ and $ker\text{-}hv\text{-}vc\text{-}sys \leq ker\text{-}vc\text{-}sys$. Therefore, by the antisymmetry property of our partial order, we can conclude that these two protocols have the same set of weakest attacks, namely $\{a_1, a_3, a_5\}$ and $\{c_1, c_3, c_5\}$. This supports hypothesis 2 that increasing the number of measurements does not necessarily further confine the adversary.
+%% TODO: Elaborate on why individual tree ordering relationships hold
+%% TODO: Elaborate on antisymmetry application
+Next, let us compare the first and third protocols. The set of reduced attack trees for the third protocol is shown in Figure \ref{fig:hv-reduced}. Now we can determine the ordering relationships between the individual attack trees in the two sets: $a_1 \simeq c_1$, $a_2 \simeq c_2$, $a_3 \simeq c_3$, $a_4 \simeq c_4$, $a_5 \simeq c_5$, $a_2 \simeq c_6$, $a_1 \prec c_7$, $a_2 \prec c_8$, $a_4 \prec c_9$, and $a_5 \prec c_{10}$. And again lastly we can determine the ordering relationships between the two protocols: $ker\text{-}vc\text{-}sys \leq ker\text{-}hv\text{-}vc\text{-}sys$ and $ker\text{-}hv\text{-}vc\text{-}sys \leq ker\text{-}vc\text{-}sys$. Therefore, by the antisymmetry property of our partial order, we can conclude that these two protocols have the same set of weakest attacks, namely $\{a_1, a_3, a_5\}$ and $\{c_1, c_3, c_5\}$. This supports hypothesis 2 that increasing the number of measurements does not necessarily further confine the adversary.
 
 
 \begin{figure}[h]
