--- a/fm24.tex
+++ b/fm24.tex
@@ -84,11 +84,37 @@ The abstract should briefly summarize the contents of the paper in
 \section{Introduction}
 %% TODO: Motivation
 
-A key facet of the negotiation routine is attestation protocol selection where selecting the best attestation protocol from among many poses a challenging problem. This difficulty can be attributed to situational nuances that impact an ordering and the variety of attestation scenarios that exist. To further complicate the problem, various dimensions for protocol analysis arise such as a protocol's complexity, its resource consumption, or its vulnerability to an adversary. Considering all facets at once makes the ordering problem exponentially harder. We therefore simplify the problem by focusing solely on comparing protocols based on their susceptibility to attack. Towards this goal, we introduce equivalence and partial order relations over Copland attestation protocols where a better protocol increases the minimal work required of an active adversary to thwart an appraiser. Our formally-modeled, Coq-based solution includes verified properties of the adversary-constrained ordering relations. Furthermore, we apply our ordering scheme to representative examples to demonstrate its accuracy and efficacy.
+\emph{Semantic remote
+  attestation}\citep{Haldar:04:Semantic-Remote,coker2011principles} is
+a process of obtaining verifiable evidence from a remote party to
+establish trust.  A \emph{relying party} makes a request of a
+\emph{target} that produces evidence for \emph{appraisal}. The
+appraisal result determines whether the relying party will continue
+interactions with the target.
 
-This emerging adversary-constrained protocol ordering requires a few key assumptions and definitions. First, we consider an active adversary that is capable of corrupting any component of the target system causing it to deviate from its regular behavior and is also capable of repairing any component of the target system returning it to its regular state. We assume that the target system has a special component, namely a root of trust for measurement (RTM), that cannot be attacked by the adversary. Furthermore, we assume an adversary will always choose the easiest attack to thwart an appraiser. Therefore, a better protocol increases the demands of an active adversary by making the easiest attack more difficult. For an adversary to attack an attestation protocol means to corrupt and repair a target system's components in a way that passes appraisal and therefore evades detection at the final measurement event. A corrupt measurer---either a measurer that itself is in a corrupt state or a measurer that relies on some other component that is in a corrupt state---will always generate evidence that indicates its target is in its regular state. While a regular measurer will generate evidence that accurately reflects the corruption state of its target. Our analysis relies solely on the structure of possible attacks and is agnostic to the specific details of how an adversary can corrupt or repair system components as required by an attack.
+\citet{Coker::Principles-of-R}~define an attestation process centered
+on the execution of \emph{attestation protocols} by \emph{attestation
+  managers}.  An attestation protocol is a sequence of: (i) locally
+performed measurements; (ii) signing and hashing data; and (iii)
+attestation requests sent to other parties.  We have since defined
+Copland~\citep{Rowe:2019:Orchestrating}, a formally specified domain
+specific language for attestation protocols and the
+maat~\citep{Pendergrass:2018:Maat} and
+MAESTRO~\citep{Petz:2021:faithful} infrastructures implementing
+Copland protocol execution.
 
-Considering these assumptions, the formalized model and subsequent analysis support the following two principles.
+When designing and selecting attestation protocols it is critical that
+we know when one protocol is ``better'' than another.
+\citet{Fritz:2023:framework} defines a framework for protocol ordering
+that defines \emph{soundness} and \emph{sufficiency} over protocols.
+A protocol is sound if it is executable and conforms to access control
+policy.  A protocol is sufficient if it provides information deemed
+suitable for making a trust decision.  Given a protocol set or a
+design decision one should choose a protocol that is sound and
+sufficient.
+
+When multiple good protocols exist or multiple design decisions are
+available, how do we choose a ``best'' protocol?
 
 \begin{enumerate}
     \item Measurements that mimic the system's dependency chain better confine the adversary
